--- a/src/main/java/gui/BoardForm.form
+++ b/src/main/java/gui/BoardForm.form
@@ -1,122 +1,130 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.BoardForm">
-  <grid id="27dc6" binding="board" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="10" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="board" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="569" height="400"/>
+      <xy x="20" y="20" width="569" height="496"/>
     </constraints>
     <properties>
-      <background color="-14184705"/>
+      <background color="-6231077"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="632f6" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="50" left="10" bottom="50" right="10"/>
+      <grid id="636b1" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="10" left="10" bottom="10" right="10"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-9187370"/>
+          <requestFocusEnabled value="true"/>
+          <verifyInputWhenFocusTarget value="true"/>
         </properties>
         <border type="none"/>
         <children>
-          <grid id="636b1" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+          <component id="4f6ef" class="javax.swing.JComboBox" binding="comboBoxBoards">
             <constraints>
-              <grid row="0" column="0" row-span="7" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-9187370"/>
-              <requestFocusEnabled value="true"/>
-              <verifyInputWhenFocusTarget value="true"/>
-            </properties>
-            <border type="none"/>
-            <children>
-              <component id="4f6ef" class="javax.swing.JComboBox" binding="comboBoxBoards">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-16759297"/>
-                  <font name="Microsoft Himalaya" size="20" style="0"/>
-                  <foreground color="-394241"/>
-                  <model/>
-                </properties>
-              </component>
-              <component id="4ba17" class="javax.swing.JButton" binding="shareBoardButton" default-binding="true">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-14184705"/>
-                  <font name="Microsoft Himalaya" size="20" style="0"/>
-                  <text value="Share Board"/>
-                </properties>
-              </component>
-            </children>
-          </grid>
-          <grid id="2d86c" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="100" left="100" bottom="100" right="100"/>
-            <constraints>
-              <grid row="0" column="1" row-span="7" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children/>
-          </grid>
-          <component id="16bd9" class="javax.swing.JButton" binding="deleteToDoButton" default-binding="true">
-            <constraints>
-              <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-16759297"/>
-              <font name="Microsoft Himalaya" size="20" style="0"/>
-              <text value="Delete ToDo"/>
+              <background color="-1"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-16212568"/>
+              <model/>
             </properties>
           </component>
-          <component id="da564" class="javax.swing.JButton" binding="orderToDoButton" default-binding="true">
+          <component id="4ba17" class="javax.swing.JButton" binding="shareBoardButton" default-binding="true">
             <constraints>
-              <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-14184705"/>
-              <font name="Microsoft Himalaya" size="20" style="0"/>
-              <text value="Order ToDo"/>
-            </properties>
-          </component>
-          <component id="fe384" class="javax.swing.JButton" binding="addToDoButton" default-binding="true">
-            <constraints>
-              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-16759297"/>
-              <font name="Microsoft Himalaya" size="20" style="0"/>
-              <text value="Add ToDo"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-1"/>
+              <text value="Share Board"/>
             </properties>
           </component>
           <component id="1c2a1" class="javax.swing.JButton" binding="dueDateButton" default-binding="true">
             <constraints>
-              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-14184705"/>
+              <font name="Elephant" size="14"/>
+              <foreground color="-1"/>
               <text value="Due Date"/>
             </properties>
           </component>
+          <component id="fe384" class="javax.swing.JButton" binding="addToDoButton" default-binding="true">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-14184705"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-1"/>
+              <text value="Add ToDo"/>
+            </properties>
+          </component>
+          <component id="da564" class="javax.swing.JButton" binding="orderToDoButton" default-binding="true">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-14184705"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-1"/>
+              <text value="Order ToDo"/>
+            </properties>
+          </component>
+          <component id="16bd9" class="javax.swing.JButton" binding="deleteToDoButton" default-binding="true">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-14184705"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-1"/>
+              <text value="Delete ToDo"/>
+            </properties>
+          </component>
+          <vspacer id="22882">
+            <constraints>
+              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
+          <vspacer id="33cc9">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
         </children>
       </grid>
       <component id="52c7b" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font name="Microsoft Himalaya" size="36" style="1"/>
-          <foreground color="-394241"/>
+          <font name="Brush Script MT" size="36" style="1"/>
+          <foreground color="-16212568"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
           <text value="Galatea Workspace"/>
         </properties>
       </component>
+      <scrollpane id="998a8" binding="ScrollPanel">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="122c2" class="javax.swing.JTable" binding="table1" default-binding="true">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
