--- a/src/main/java/gui/RegisterForm.form
+++ b/src/main/java/gui/RegisterForm.form
@@ -6,7 +6,7 @@
       <xy x="20" y="20" width="312" height="1054"/>
     </constraints>
     <properties>
-      <background color="-9187370"/>
+      <background color="-6231077"/>
       <minimumSize width="257" height="350"/>
       <preferredSize width="257" height="350"/>
     </properties>
@@ -18,17 +18,17 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-9187370"/>
+          <background color="-6231077"/>
         </properties>
-        <border type="none"/>
+        <border type="bevel-raised"/>
         <children>
           <component id="8660a" class="javax.swing.JLabel">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font name="Microsoft Himalaya" size="24" style="0"/>
-              <foreground color="-131085"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-16212568"/>
               <text value="Username"/>
             </properties>
           </component>
@@ -45,8 +45,8 @@
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font name="Microsoft Himalaya" size="24" style="0"/>
-              <foreground color="-131085"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-16212568"/>
               <text value="Password"/>
             </properties>
           </component>
@@ -61,23 +61,26 @@
           <grid id="71245" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="10" left="10" bottom="10" right="10"/>
             <constraints>
-              <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-9187370"/>
+              <background color="-6231077"/>
             </properties>
             <border type="none"/>
             <children>
               <component id="331dd" class="javax.swing.JButton" binding="registerButton" default-binding="true">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <background color="-16759297"/>
-                  <font name="Microsoft Himalaya" size="24" style="0"/>
+                  <background color="-14184705"/>
+                  <borderPainted value="false"/>
+                  <font name="Elephant" size="14" style="0"/>
                   <foreground color="-131085"/>
+                  <horizontalAlignment value="0"/>
                   <horizontalTextPosition value="0"/>
                   <margin top="0" left="20" bottom="0" right="20"/>
+                  <name value=""/>
                   <text value="Register"/>
                 </properties>
               </component>
@@ -89,7 +92,7 @@
               <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-9187370"/>
+              <background color="-6231077"/>
             </properties>
             <border type="none"/>
             <children/>
@@ -100,8 +103,8 @@
             </constraints>
             <properties>
               <background color="-9187370"/>
-              <font name="Monotype Corsiva" size="36" style="0"/>
-              <foreground color="-131085"/>
+              <font name="Brush Script MT" size="36" style="1"/>
+              <foreground color="-16212568"/>
               <opaque value="false"/>
               <text value="Enter your details:"/>
             </properties>
@@ -112,7 +115,8 @@
               <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-9187370"/>
+              <autoscrolls value="true"/>
+              <background color="-6231077"/>
             </properties>
             <border type="none"/>
             <children/>
