--- a/src/main/java/gui/UserForm.form
+++ b/src/main/java/gui/UserForm.form
@@ -1,53 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.UserForm">
-  <grid id="27dc6" binding="panel1" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel1" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="50" left="0" bottom="50" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="309" height="584"/>
+      <xy x="20" y="20" width="319" height="584"/>
     </constraints>
     <properties>
-      <background color="-9187370"/>
+      <background color="-6231077"/>
       <focusCycleRoot value="false"/>
       <opaque value="true"/>
     </properties>
-    <border type="none" title="" title-justification="2">
+    <border type="bevel-raised" title="" title-justification="2">
       <font/>
     </border>
     <children>
-      <grid id="c9153" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="30" left="10" bottom="10" right="10"/>
+      <grid id="c9153" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="30" left="10" bottom="30" right="10"/>
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-9187370"/>
         </properties>
-        <border type="none"/>
+        <border type="bevel-raised"/>
         <children>
           <component id="371a4" class="javax.swing.JTextField" binding="usernameField1">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
             <properties>
               <caretColor color="-16759297"/>
               <foreground color="-16759297"/>
+              <text value=""/>
             </properties>
           </component>
           <component id="a2345" class="javax.swing.JLabel">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font name="Microsoft Himalaya" size="24" style="0"/>
-              <foreground color="-197889"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-16212568"/>
               <text value="Password"/>
             </properties>
           </component>
           <component id="904d" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -57,45 +58,33 @@
           </component>
           <component id="b0d35" class="javax.swing.JButton" binding="loginButton" default-binding="true">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-14184705"/>
-              <borderPainted value="true"/>
-              <font name="Microsoft Himalaya" size="24" style="0"/>
-              <foreground color="-197889"/>
+              <borderPainted value="false"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-1"/>
               <horizontalTextPosition value="0"/>
               <iconTextGap value="4"/>
               <margin top="0" left="0" bottom="0" right="0"/>
               <text value="Login"/>
             </properties>
           </component>
-          <component id="83cca" class="javax.swing.JButton" binding="donTHaveAccountButton" default-binding="true">
-            <constraints>
-              <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-16759297"/>
-              <font name="Microsoft Himalaya" size="24" style="0"/>
-              <foreground color="-197889"/>
-              <horizontalTextPosition value="0"/>
-              <text value="Don't have Account"/>
-            </properties>
-          </component>
           <component id="d0a84" class="javax.swing.JLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font name="Microsoft Himalaya" size="24" style="0"/>
-              <foreground color="-197889"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-16212568"/>
               <text value="Username"/>
             </properties>
           </component>
           <grid id="82ec8" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="20" left="10" bottom="10" right="10"/>
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-9187370"/>
@@ -103,16 +92,28 @@
             <border type="none"/>
             <children/>
           </grid>
+          <component id="aa487" class="javax.swing.JButton" binding="donTHaveAccountButton">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <borderPainted value="false"/>
+              <contentAreaFilled value="false"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-16212568"/>
+              <text value="Don't Have Account"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <component id="97924" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-9187370"/>
-          <font name="Monotype Corsiva" size="36" style="0"/>
-          <foreground color="-131085"/>
+          <font name="Brush Script MT" size="48" style="0"/>
+          <foreground color="-16212568"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
           <text value="Welcome to"/>
@@ -124,11 +125,18 @@
         </constraints>
         <properties>
           <background color="-9187370"/>
-          <font name="Monotype Corsiva" size="36" style="0"/>
-          <foreground color="-131085"/>
+          <font name="Brush Script MT" size="48" style="0"/>
+          <foreground color="-16212568"/>
+          <horizontalAlignment value="0"/>
+          <horizontalTextPosition value="0"/>
           <text value="Galatea"/>
         </properties>
       </component>
+      <vspacer id="acde1">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
